--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "^5.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
